--- a/apps/web/src/components/KitchenSinkLayout.astro
+++ b/apps/web/src/components/KitchenSinkLayout.astro
@@ -53,7 +53,7 @@ const pages = [
 const currentPath = Astro.url.pathname.replace(/\/$/, "");
 ---
 
-<html class="bg-background">
+<html lang="en" class="bg-background">
   <head>
     <meta charset="utf-8" />
     <meta name="robots" content="noindex, nofollow" />
