--- a/apps/web/src/pages/health.astro
+++ b/apps/web/src/pages/health.astro
@@ -60,7 +60,7 @@ import { ArrowDownIcon, MenuIcon } from "@lucide/astro";
 
   <section class="pt-10 relative z-10 grid grid-cols-12 w-full text-white">
     <img
-      src="/demo/health/hero-01.png"
+      src="/demo/health/hero-01.jpg"
       class="object-cover absolute left-0 z-0 h-full w-full"
     />
     <div class="col-span-8 relative z-10 px-8 pt-30 pb-40">
@@ -103,29 +103,29 @@ import { ArrowDownIcon, MenuIcon } from "@lucide/astro";
       <LinkGroup class="col-span-3 text-lg">
         <LinkGroupTitle class="text-xl font-medium">How it works</LinkGroupTitle>
         <LinkGroupList>
-          <LinkGroupItem><a href="/blog">Blog</a></LinkGroupItem>
+          <LinkGroupItem><a href="#">Blog</a></LinkGroupItem>
           <LinkGroupItem><a href="/docs">Documentation</a></LinkGroupItem>
-          <LinkGroupItem><a href="/pricing">Pricing</a></LinkGroupItem>
-          <LinkGroupItem><a href="/support">Support</a></LinkGroupItem>
+          <LinkGroupItem><a href="#">Pricing</a></LinkGroupItem>
+          <LinkGroupItem><a href="#">Support</a></LinkGroupItem>
         </LinkGroupList>
       </LinkGroup>
       <LinkGroup class="col-span-3 text-lg">
         <LinkGroupTitle class="text-xl font-medium">Information</LinkGroupTitle>
         <LinkGroupList>
           <LinkGroupItem><a href="/">Home</a></LinkGroupItem>
-          <LinkGroupItem><a href="/about">About</a></LinkGroupItem>
-          <LinkGroupItem><a href="/contact">Contact</a></LinkGroupItem>
-          <LinkGroupItem><a href="/careers">Careers</a></LinkGroupItem>
-          <LinkGroupItem><a href="/press">Press</a></LinkGroupItem>
+          <LinkGroupItem><a href="#">About</a></LinkGroupItem>
+          <LinkGroupItem><a href="#">Contact</a></LinkGroupItem>
+          <LinkGroupItem><a href="#">Careers</a></LinkGroupItem>
+          <LinkGroupItem><a href="#">Press</a></LinkGroupItem>
         </LinkGroupList>
       </LinkGroup>
       <LinkGroup class="col-span-3 text-lg">
         <LinkGroupTitle class="text-xl font-medium">Company</LinkGroupTitle>
         <LinkGroupList>
-          <LinkGroupItem><a href="/about">About</a></LinkGroupItem>
-          <LinkGroupItem><a href="/contact">Contact</a></LinkGroupItem>
-          <LinkGroupItem><a href="/careers">Careers</a></LinkGroupItem>
-          <LinkGroupItem><a href="/press">Press</a></LinkGroupItem>
+          <LinkGroupItem><a href="#">About</a></LinkGroupItem>
+          <LinkGroupItem><a href="#">Contact</a></LinkGroupItem>
+          <LinkGroupItem><a href="#">Careers</a></LinkGroupItem>
+          <LinkGroupItem><a href="#">Press</a></LinkGroupItem>
         </LinkGroupList>
       </LinkGroup>
     </div>
