--- a/apps/web/src/pages/blocks/footers/footer-1/index.astro
+++ b/apps/web/src/pages/blocks/footers/footer-1/index.astro
@@ -46,8 +46,8 @@ import { Button } from "@bejamas/ui/components/button";
           <LinkGroup>
             <LinkGroupTitle>Company</LinkGroupTitle>
             <LinkGroupList>
-              <LinkGroupItem><a href="/about">About</a></LinkGroupItem>
-              <LinkGroupItem><a href="/careers">Careers</a></LinkGroupItem>
+              <LinkGroupItem><a href="#">About</a></LinkGroupItem>
+              <LinkGroupItem><a href="#">Careers</a></LinkGroupItem>
             </LinkGroupList>
           </LinkGroup>
           <LinkGroup>
