--- a/apps/web/src/pages/blocks/navigation-headers/navbar-2.astro
+++ b/apps/web/src/pages/blocks/navigation-headers/navbar-2.astro
@@ -20,7 +20,7 @@ import { StickySurface } from "@bejamas/ui/components/sticky-surface";
   <div class="bg-muted min-h-[1500px]">
     <div class="bg-muted text-muted-foreground p-4 w-full text-center">
       New release available! See the <a
-        href="/releases/v1.0.0"
+        href="#"
         class="text-primary">changelog</a
       > for more details.
     </div>
@@ -77,7 +77,7 @@ import { StickySurface } from "@bejamas/ui/components/sticky-surface";
             </DropdownMenu>
           </li>
           <li>
-            <Button as="a" href="/contact" variant="ghost">Contact</Button>
+            <Button as="a" href="#" variant="ghost">Contact</Button>
           </li>
         </ul>
         <div slot="actions" class="flex items-center gap-2">
