feat: remove scrollbar from sidebar

--- a/packages/starlight-theme-bejamas/src/overrides/PageFrame.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/PageFrame.astro
@@ -110,6 +110,7 @@ const { template } = Astro.locals.starlightRoute.entry.data;
       width: 100%;
       background-color: var(--background);
       overflow-y: auto;
+      scrollbar-width: none;
     }
 
     :global([aria-expanded="true"]) ~ .sidebar-pane {
