feat: add avatar group

--- a/packages/ui/src/components/avatar/Avatar.astro
+++ b/packages/ui/src/components/avatar/Avatar.astro
@@ -6,53 +6,104 @@
  * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/BejamasUI---Design-System?node-id=2531-2620&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
- * <div class="flex flex-row flex-wrap items-center gap-12">
+ * <div class="flex flex-wrap items-center gap-4">
  *   <Avatar>
- *     <AvatarImage>
- *       <img src="https://github.com/bejamas.png" alt="@bejamas" />
- *     </AvatarImage>
- *     <AvatarFallback>BJ</AvatarFallback>
- *   </Avatar>
- *   <Avatar class="rounded-lg">
- *     <AvatarImage>
- *       <img src="https://github.com/thomkrupa.png" alt="@thomkrupa" />
- *     </AvatarImage>
+ *     <AvatarImage src="https://github.com/thomkrupa.png" alt="@thomkrupa" />
  *     <AvatarFallback>TK</AvatarFallback>
+ *     <AvatarBadge />
  *   </Avatar>
- *   <div class="*:data-[slot=avatar]:ring-background flex -space-x-2 *:data-[slot=avatar]:ring-2 *:data-[slot=avatar]:grayscale">
+ *   <AvatarGroup>
  *     <Avatar>
- *       <AvatarImage>
- *         <img src="https://github.com/withastro.png" alt="@withastro" />
- *       </AvatarImage>
+ *       <AvatarImage src="https://github.com/withastro.png" alt="@withastro" />
  *       <AvatarFallback>WA</AvatarFallback>
  *     </Avatar>
  *     <Avatar>
- *       <AvatarImage>
- *         <img src="https://github.com/shadcn.png" alt="@shadcn" />
- *       </AvatarImage>
- *       <AvatarFallback>SH</AvatarFallback>
+ *       <AvatarImage src="https://github.com/bejamas.png" alt="@bejamas" />
+ *       <AvatarFallback>BJ</AvatarFallback>
  *     </Avatar>
- *     <Avatar>
- *       <AvatarImage>
- *         <img src="https://github.com/fredkschott.png" alt="@fredkschott" />
- *       </AvatarImage>
- *       <AvatarFallback>FS</AvatarFallback>
- *     </Avatar>
- *   </div>
+ *     <AvatarGroupCount>+2</AvatarGroupCount>
+ *   </AvatarGroup>
  * </div>
- * 
+ *
  * @usage
- * 
+ *
  * ```astro nocollapse
  * ---
- * import { Avatar, AvatarImage, AvatarFallback } from '@bejamas/ui/components/avatar';
+ * import {
+ *   Avatar,
+ *   AvatarImage,
+ *   AvatarFallback,
+ *   AvatarBadge,
+ *   AvatarGroup,
+ *   AvatarGroupCount,
+ * } from '@bejamas/ui/components/avatar';
  * ---
- * 
+ *
+ * <Avatar size="lg">
+ *   <AvatarImage src="https://github.com/thomkrupa.png" alt="@thomkrupa" />
+ *   <AvatarFallback>TK</AvatarFallback>
+ *   <AvatarBadge />
+ * </Avatar>
+ * ```
+ *
+ * @examples
+ *
+ * ### Sizes
+ *
+ * <div class="flex items-center gap-4">
+ *   <Avatar size="sm">
+ *     <AvatarImage src="https://github.com/bejamas.png" alt="small" />
+ *     <AvatarFallback>SM</AvatarFallback>
+ *   </Avatar>
+ *   <Avatar>
+ *     <AvatarImage src="https://github.com/bejamas.png" alt="default" />
+ *     <AvatarFallback>MD</AvatarFallback>
+ *   </Avatar>
+ *   <Avatar size="lg">
+ *     <AvatarImage src="https://github.com/bejamas.png" alt="large" />
+ *     <AvatarFallback>LG</AvatarFallback>
+ *   </Avatar>
+ * </div>
+ *
+ * ### Badge
+ *
+ * <Avatar>
+ *   <AvatarImage src="https://github.com/thomkrupa.png" alt="@thomkrupa" />
+ *   <AvatarFallback>TK</AvatarFallback>
+ *   <AvatarBadge />
+ * </Avatar>
+ *
+ * ### Group
+ *
+ * <AvatarGroup>
+ *   <Avatar>
+ *     <AvatarImage src="https://github.com/withastro.png" alt="@withastro" />
+ *     <AvatarFallback>WA</AvatarFallback>
+ *   </Avatar>
+ *   <Avatar>
+ *     <AvatarImage src="https://github.com/bejamas.png" alt="@bejamas" />
+ *     <AvatarFallback>BJ</AvatarFallback>
+ *   </Avatar>
+ *   <Avatar>
+ *     <AvatarFallback>FS</AvatarFallback>
+ *   </Avatar>
+ *   <AvatarGroupCount>+3</AvatarGroupCount>
+ * </AvatarGroup>
+ *
+ * ### With `astro:assets` Image
+ *
+ * ```astro nopreview nocollapse
+ * ---
+ * import { Image } from "astro:assets";
+ * import profile from "@/assets/profile.jpg";
+ * import { Avatar, AvatarImage, AvatarFallback } from "@bejamas/ui/components/avatar";
+ * ---
+ *
  * <Avatar>
  *   <AvatarImage>
- *     <img src="https://github.com/thomkrupa.png" alt="@thomkrupa" />
+ *     <Image src={profile} alt="Profile photo" />
  *   </AvatarImage>
- *   <AvatarFallback>TK</AvatarFallback>
+ *   <AvatarFallback>PR</AvatarFallback>
  * </Avatar>
  * ```
  */
@@ -61,22 +112,29 @@ import { cn } from "@bejamas/ui/lib/utils";
 import type { HTMLAttributes, HTMLTag } from "astro/types";
 
 type Props = {
-  as?: HTMLTag;
   class?: string;
-} & HTMLAttributes<"div">;
+  size?: "default" | "sm" | "lg";
+} & HTMLAttributes<"span">;
 
 const {
-  as: Tag = "div",
   class: className = "",
+  size = "default",
   ...rest
 } = Astro.props as Props;
 ---
 
-<Tag
+<span
   {...rest}
   data-slot="avatar"
-  class={cn("relative flex size-8 shrink-0 overflow-hidden rounded-full", className)}
+  data-size={size}
+  class={cn(
+    "group/avatar relative flex size-8 shrink-0 select-none rounded-full",
+    "after:absolute after:inset-0 after:rounded-full after:border after:border-border",
+    "after:mix-blend-darken dark:after:mix-blend-lighten",
+    "data-[size=sm]:size-6 data-[size=lg]:size-10",
+    "z-1",
+    className,
+  )}
 >
   <slot />
-</Tag>
-
+</span>
