--- a/packages/ui/src/components/avatar/AvatarImage.astro
+++ b/packages/ui/src/components/avatar/AvatarImage.astro
@@ -5,20 +5,44 @@ import type { HTMLAttributes, HTMLTag } from "astro/types";
 type Props = {
   as?: HTMLTag;
   class?: string;
-} & HTMLAttributes<"div">;
+  src?: string;
+  alt?: string;
+} & HTMLAttributes<"img">;
 
 const {
-  as: Tag = "div",
+  as,
   class: className = "",
+  src,
+  alt = "",
   ...rest
 } = Astro.props as Props;
+
+const Tag = (as ?? "div") as HTMLTag;
 ---
 
-<Tag
-  {...rest}
-  data-slot="avatar-image"
-  class={cn("relative z-10 aspect-square size-full [&_img]:size-full [&_img]:object-cover", className)}
->
-  <slot />
-</Tag>
-
+{
+  src || as === "img" ? (
+    <img
+      {...rest}
+      data-slot="avatar-image"
+      src={src}
+      alt={alt}
+      class={cn(
+        "relative z-10 rounded-full aspect-square size-full object-cover",
+        className,
+      )}
+    />
+  ) : (
+    <Tag
+      {...rest}
+      data-slot="avatar-image"
+      class={cn(
+        "relative z-10 rounded-full aspect-square size-full overflow-hidden",
+        "[&_img]:size-full [&_img]:object-cover",
+        className,
+      )}
+    >
+      <slot />
+    </Tag>
+  )
+}
